# python-utilities

./: #exclude-pre-commit.toml  .cheat-sheet.txt  .gitattributes  .gitignore  .windsurfrules  README.md  ___Cheat-Sheet.txt  ___cheatsheet.txt  ___install.txt  ___start.txt  __history.txt  __licenses.txt  __mypy.py  __package_tree.txt  __package_tree_all.txt  __pyright.py  __pyright.txt  __tree.txt  _basedpyright.py  _mypy.py  _pyright.py  _utils.xlsx  globals.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.type-check-result/: mypy-src.txt  pyright-src.txt
settings/: actions.yaml  projects.yaml  repos.yaml  update.yaml
src/: main.py
src/helper/: distribute.py
src/utils/: audio.py  beautify.py  decorator.py  excel.py  file.py  files.py  format.py  globals.py  log.py  metadata.py  metadata_mutagen.py  pandas.py  prefs.py  result.py  text.py  trace.py  util.py  utilities.py  utils.py  web_helper.py  xml.py  zip.py
