[project]
name = "zz-utils"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "dicttoxml>=1.7.16",
    "mutagen>=1.47.0",
    "openpyxl>=3.1.5",
    "orjson>=3.10.12",
    "pymediainfo>=6.1.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "result>=0.17.0",
    "tzdata>=2024.2",
    "xmltodict>=0.14.2",
]
