[project]
name = "zz-utils"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "cssbeautifier>=1.15.1",
    "dicttoxml>=1.7.16",
    "jsbeautifier>=1.15.1",
    "lxml>=5.3.0",
    "mutagen>=1.47.0",
    "openpyxl>=3.1.5",
    "orjson>=3.10.12",
    "pandas>=2.2.3",
    "pymediainfo>=6.1.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "result>=0.17.0",
    "tzdata>=2024.2",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "lxml-stubs>=0.5.1",
    "openpyxl-stubs>=0.1.25",
    "pandas-stubs>=2.2.3.241126",
    "types-openpyxl>=3.1.5.20241225",
    "types-pyyaml>=6.0.12.20241230",
    "types-xmltodict>=0.14.0.20241009",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
